--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -129,19 +129,19 @@
           "height": 635
         },
         "id": "0tedtxaac7sE",
-        "outputId": "e482b2a5-7a91-4c2d-b60c-689ad6314bbf"
+        "outputId": "2ce61f33-5725-43b2-e5f0-050e3ae317af"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter your weight (kg): 58\n",
-            "Enter your height (m): 1.62\n",
+            "Enter your weight (kg): 61\n",
+            "Enter your height (m): 1.7\n",
             "Are you a smoker? (Yes/No): no\n",
-            "Do you consume alcohol? (Yes/No): no\n",
-            "Are you physically active? (Yes/No): yes\n",
+            "Do you consume alcohol? (Yes/No): yes\n",
+            "Are you physically active? (Yes/No): no\n",
             "Data saved to heart_condition_data.csv\n",
             "Would you like to enter another record? (Yes/No): no\n"
           ]
