--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnMjk44mo9bmwEriZdemY6",
+      "authorship_tag": "ABX9TyOydUhAqBeud8hSIKp23KNN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,18 +129,18 @@
           "height": 635
         },
         "id": "0tedtxaac7sE",
-        "outputId": "018472a7-e67e-4c88-f383-3863f588894c"
+        "outputId": "2ce61f33-5725-43b2-e5f0-050e3ae317af"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter your weight (kg): 45\n",
-            "Enter your height (m): 1.54\n",
+            "Enter your weight (kg): 61\n",
+            "Enter your height (m): 1.7\n",
             "Are you a smoker? (Yes/No): no\n",
-            "Do you consume alcohol? (Yes/No): no\n",
+            "Do you consume alcohol? (Yes/No): yes\n",
             "Are you physically active? (Yes/No): no\n",
             "Data saved to heart_condition_data.csv\n",
             "Would you like to enter another record? (Yes/No): no\n"
@@ -157,6 +157,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GIpW79YJhoRS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
